k8s/deploy-api-emails.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-emails-deployment

spec:
  replicas: 1 
  selector:
    matchLabels:
      component: api-emails
      
  template:

    metadata:
      labels:
        component: api-emails

    spec:
      containers:
        - name: api-emails
          image: sergiom8m8/api-emails
          ports:
          - containerPort: 5002

---

apiVersion: v1
kind: Service

metadata:
  name: api-emails

spec:
  type: ClusterIP
  selector:
    component: api-emails
  ports:
    - protocol: TCP
      port: 5002  
      targetPort: 5002
