k8s/deploy-api_db.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-db-deployment

spec:
  replicas: 1  
  selector:
    matchLabels:
      component: api-db
      
  template:

    metadata:
      labels:
        component: api-db

    spec:
      containers:
        - name: api-db
          image: sergiom8m8/api-db
          ports:
          - containerPort: 5003

---

apiVersion: v1
kind: Service

metadata:
  name: api-db

spec:
  type: ClusterIP
  selector:
    component: api-db
  ports:
    - protocol: TCP
      port: 5003  
      targetPort: 5003
