k8s/deploy-app.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      component: app

  template:
    
    metadata:
      labels:
        component: app

    spec:
      containers:
      - name: my-app
        image: sergiom8m8/app
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service

metadata:
  name: app

spec:
  type: LoadBalancer
  selector:
    component: app
  ports:
  - port: 5000
    targetPort: 5000
