k8s/deploy-db.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: db

  template:

    metadata:
      labels:
        component: db
      
    spec:
      containers:
        - name: db
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
       
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql

            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d

      volumes:
       
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
              
        - name: mysql-initdb
          configMap:
            name: appdb-script

---

apiVersion: v1
kind: Service

metadata:
  name: db

spec:
  type: ClusterIP
  selector:
    component: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
