k8s/deploy-phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: phpmyadmin-deployment
  labels:
    component: phpmyadmin

spec:
  replicas: 1
  selector:
    matchLabels:
      component: phpmyadmin

  template:

    metadata:
      labels:
        component: phpmyadmin

    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service

metadata:
  name: phpmyadmin

spec:
  type: LoadBalancer
  selector:
    component: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
